--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example</groupId>
-  <artifactId>test</artifactId>
+  <artifactId>BillingSystem</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>test</name>
 
@@ -58,7 +58,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.example.test/com.example.test.HelloApplication</mainClass>
+              <mainClass>com.example.test/ma.emsi.billingsystem.LoginApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
